--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
   --clr-neutral-100: hsl(0 0% 100%);
 
   --ff-primary: "Be Vietnam Pro", sans-serif;
-
+ 
   --ff-body: var(--ff-primary);
   --ff-heading: var(--ff-primary);
 
@@ -91,12 +91,12 @@ body {
   line-height: 1.5;
 }
 
-p {
+.para {
   opacity: 0.65;
   max-width: 55ch;
 }
 
-p[data-width="wide"] {
+.para[data-width="wide"] {
   max-width: 100%;
 }
 
@@ -383,7 +383,7 @@ img {vertical-align: middle;}
   margin: 0;
 }
 
-/* background */
+/* about */
 
 .home-intro {
   padding: 50vh 0;
@@ -392,6 +392,10 @@ img {vertical-align: middle;}
   background-blend-mode: multiply;
   color: white;
 }
+
+
+
+
 
 
 
@@ -547,6 +551,206 @@ img {vertical-align: middle;}
   }
   
 }
+
+
+/* animatni for text */
+
+.ani{
+     position : relative ;
+     width : 100% ;
+     height: 75vh;
+     display : flex ;
+     justify-content : center ;
+     align-items : center ;
+     background : #262626 ;
+     color : #fff ;
+}
+
+
+.ani .context{
+  max-width: 80%;
+}
+
+
+
+.ani .context h2{
+    position : relative ;
+    margin : 0 ;
+    padding : 0 ;
+    display : block ;
+    font-size : 3em ;
+    transition : 0.5s ;
+    transform-origin: left;
+    transform: scaleX(0);
+}
+
+.ani .context h2[data-scroll="in"]{
+  transform: scaleX(1);
+
+}
+
+.ani .context h2:before{
+
+  content : '';
+  position : absolute ;
+  top : 0 ;
+ Left : 0 ;
+    width : 100% ;
+    height : 100% ;
+   background : #717171 ;
+    transform-origin : right;
+     transition: 0.5s;
+}
+
+.ani .context h2[data-scroll="in"]::before{
+  transform: scaleX(0);
+  transition-delay: 0.5s;
+
+}
+
+
+.ani .context h3
+{
+    position : relative ;
+    margin : 5px 0 0 ;
+    padding : 0 ;
+    display : inline-block ;
+    font-size : 2em ;
+    transition : 0.5s ;
+    transform-origin: right;
+    transform: scaleX(0);
+}
+
+.ani .context h3[data-scroll="in"]{
+  transform: scaleX(1);
+  transition-delay: 1s;
+
+}
+
+
+.ani .context h3:before{
+
+    content : '' ;
+   position : absolute ;
+    top : 0 ;
+    Left : 0 ;
+    width : 100% ;
+    height : 100% ;
+   background : #f3c892 ;
+    transform-origin : left;
+     transition: 0.5s;
+}
+
+.ani .context h3[data-scroll="in"]::before{
+  transform: scaleX(0);
+  transition-delay: 1.5s;
+
+}
+
+
+.ani .context p{
+  font-size: 1.2rem;
+  transition: 1s;
+  opacity: 0;
+  
+}
+
+.ani .context p[data-scroll="in"]{
+  opacity: 1;
+  transition-delay: 1s;
+}
+
+
+/* .ani .context button[data-scroll="in"]{
+  transform: translateX(1);
+  transition-delay: 1s;
+  opacity: 1;
+
+} */
+
+
+
+.reveal-ani {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.reveal-ani:nth-child(1) {
+  color: #e0ffff;
+}
+.reveal-ani:nth-child(2) {
+  color: #42455a;
+  background: #e0ffff;
+}
+.reveal-ani:nth-child(3) {
+  color: #e0ffff;
+}
+.reveal-ani:nth-child(4) {
+  color: #42455a;
+  background: #e0ffff;
+}
+.reveal-ani .container {
+  margin: 100px;
+}
+.reveal-ani h1 {
+  font-size: 3rem;
+  margin: 20px;
+}
+.reveal-ani h2 {
+  font-size: 40px;
+  text-align: center;
+  text-transform: uppercase;
+}
+.reveal-ani .text-container {
+  display: flex;
+}
+.reveal-ani .text-container .text-box {
+  margin: 20px;
+  padding: 20px;
+  background: #00c2cb;
+}
+.reveal-ani .text-container .text-box h3 {
+  font-size: 30px;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+@media (max-width: 900px) {
+  .reveal-ani h1 {
+    font-size: 2rem;
+    text-align: center;
+  }
+  .reveal-ani .text-container {
+    flex-direction: column;
+  }
+}
+
+.reveal {
+  position: relative;
+  opacity: 0;
+}
+
+.reveal.active {
+  opacity: 1;
+}
+.active.fade-bottom {
+  animation: fade-bottom 1s ease-in;
+}
+
+@keyframes fade-bottom {
+  0% {
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+
 
 
 /* Utility classes */
