--- a/styles.css
+++ b/styles.css
@@ -494,7 +494,7 @@ img {vertical-align: middle;}
 
 .profile-picture {
   width: 100%;
-  height: 200px;
+  height: 250px;
   object-fit: cover;
   margin-bottom: 12px;
 }
@@ -551,6 +551,29 @@ img {vertical-align: middle;}
     margin-bottom: 50px;
   }
   
+}
+
+/*Hover me*/
+
+.profile{
+  background:white;
+  cursor: pointer;
+  border:1px solid #d6d6d6;
+  box-shadow:0 4px 6px 0px rgba(0,0,0,0.25);
+  transition:.2s all; 
+}
+.grid:hover .profile{
+  filter:blur(3px);
+  opacity:.5;
+  transform: scale(.98);
+  box-shadow:none;
+}
+.grid:hover .profile:hover{
+  transform:scale(1);
+  filter:blur(0px);
+  background-color: #69a5ee;
+  opacity:1;
+  box-shadow:0 8px 20px 0px rgba(0,0,0,0.125);
 }
 
 
