--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
   --clr-neutral-100: hsl(0 0% 100%);
 
   --ff-primary: "Be Vietnam Pro", sans-serif;
- 
+
   --ff-body: var(--ff-primary);
   --ff-heading: var(--ff-primary);
 
@@ -208,7 +208,7 @@ body {
 
 .logo {
   cursor: pointer;
-  width: 100px;
+  width: 80px;
   border-radius: 50px;
 }
 
@@ -305,6 +305,18 @@ body {
 }
 
 
+/* footer */
+
+.brand-name{
+  display: flex;
+  align-items: center;
+}
+
+.bran-nam{
+  margin-left: 10px;
+  font-size: var(--size-400);
+}
+
 
 
 
@@ -365,7 +377,7 @@ img {vertical-align: middle;}
 }
 
 @keyframes fade {
-  from {opacity: .4} 
+  from {opacity: .4}
   to {opacity: 1}
 }
 
@@ -379,7 +391,7 @@ img {vertical-align: middle;}
   display: block;
   color: #f2f2f2;
   padding-bottom: 5%;
-  padding-top: 1%; 
+  padding-top: 1%;
   margin: 0;
 }
 
@@ -391,58 +403,12 @@ img {vertical-align: middle;}
   background-size: cover;
   background-blend-mode: multiply;
   color: white;
-  
+
 }
 
 
 
-
-
-
-
-/* Footer */
-
-.footer {
-  text-align: center;
-  color: #f3c892;
-  background-color: #24252A;
-}
-.footer ul{
-  list-style: none;
-  size: 200px;
-}
-
-.footer-name{
-  padding-top: 30px;
-  font-size: 40px;
-}
-
-#social-media a {
-  width: 2px;
-  padding: 10px;
-  font-size: 1.7rem;
-  color: #777;
-  transition: 0.3s;
-}
-
-#social-media a:hover {
-  color: #f3c892;
-}
-
-.so-media{
-  margin-top: 10px;
-  display: flex;
-  justify-content: center;
-}
-
-.copyright{
-  text-align: center;
-  padding-top: 15px;
-  padding-bottom: 2%;
-  opacity: 0.3;
-  font-size: 15px;
-  margin-bottom: 0;
-}
+/*goals*/
 
 .goals{
   text-align: center;
@@ -450,8 +416,6 @@ img {vertical-align: middle;}
   background-color: #fff;
   padding-top: 3.5rem;
 }
-
-
 
 .goal{
   text-align: center;
@@ -472,8 +436,8 @@ img {vertical-align: middle;}
 .container1{
   display: flex;
   justify-content: center;
-  padding: 3rem; 
-  margin-top: -64px; 
+  padding: 3rem;
+  margin-top: -64px;
   background-color: #fff;
 }
 
@@ -550,7 +514,7 @@ img {vertical-align: middle;}
   .profile{
     margin-bottom: 50px;
   }
-  
+
 }
 
 /*Hover me*/
@@ -560,7 +524,7 @@ img {vertical-align: middle;}
   cursor: pointer;
   border:1px solid #d6d6d6;
   box-shadow:0 4px 6px 0px rgba(0,0,0,0.25);
-  transition:.2s all; 
+  transition:.2s all;
 }
 .grid:hover .profile{
   filter:blur(3px);
@@ -577,12 +541,42 @@ img {vertical-align: middle;}
 }
 
 
-/* animatni for text */
+
+/*founder page*/
+
+.contain {
+  --max-width: 1110px;
+  --padding: 1rem;
+
+  width: min(var(--max-width), 100% - (var(--padding) * 2));
+  margin-inline: auto;
+}
+
+:where(.flow :not(:first-child)) {
+  margin-top: var(--flow-spacer, 2em);
+}
+
+
+.even-grid {
+  display: grid;
+  gap: 1rem;
+
+}
+
+@media (min-width: 50em) {
+  .even-grid {
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
+  }
+}
+
+
+/* animation for text */
 
 .ani{
      position : relative ;
      width : 100% ;
-     height: 75vh;
+
      display : flex ;
      justify-content : center ;
      align-items : center ;
@@ -591,9 +585,9 @@ img {vertical-align: middle;}
 }
 
 
-.ani .context{
+/* .ani .context{
   max-width: 80%;
-}
+} */
 
 
 
@@ -676,7 +670,7 @@ img {vertical-align: middle;}
   font-size: 1.2rem;
   transition: 1s;
   opacity: 0;
-  
+
 }
 
 .ani .context p[data-scroll="in"]{
@@ -693,6 +687,7 @@ img {vertical-align: middle;}
 } */
 
 
+/* Goals animation*/
 
 .reveal-ani {
   min-height: 100vh;
@@ -772,6 +767,108 @@ img {vertical-align: middle;}
     transform: translateY(0);
     opacity: 1;
   }
+}
+
+
+
+/* footer */
+
+.primary-footer {
+  --logo-color: var(--clr-neutral-100);
+}
+
+.primary-footer-wrapper {
+  display: grid;
+  gap: var(--size-700);
+  grid-template-areas:
+    "form"
+    "nav"
+    "logo-social";
+}
+
+.primary-footer-logo-social {
+  grid-area: logo-social;
+
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  gap: var(--size-700);
+}
+
+.primary-footer-nav {
+  grid-area: nav;
+}
+
+.primary-footer-form {
+  grid-area: form;
+
+  display: grid;
+  align-content: space-between;
+}
+
+.primary-footer form {
+  display: flex;
+  gap: var(--size-200);
+}
+
+input:where([type="text"], [type="email"], ) {
+  border-radius: 100vw;
+  border: 0;
+  padding: var(--size-300) var(--size-400);
+}
+
+@media (min-width: 50em) {
+  .primary-footer-wrapper {
+    grid-template-areas: "logo-social nav form";
+  }
+
+  .primary-footer-logo-social {
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: var(--size-700);
+  }
+}
+
+@media (max-width: 50em) {
+  .primary-footer-wrapper > * {
+    margin-inline: auto;
+  }
+}
+
+/* footer navigation */
+
+.footer-nav {
+  columns: 2;
+  gap: clamp(var(--size-200), 30vw, var(--size-900));
+}
+
+.footer-nav a {
+  color: var(--clr-neutral-100);
+  text-decoration: none;
+}
+
+.footer-nav a:is(:hover, :focus) {
+  color: var(--clr-accent-400);
+}
+
+
+/* social list */
+
+.social-list {
+  display: flex;
+  gap: var(--size-600);
+  
+}
+
+.social-icon {
+  width: var(--size-600);
+  aspect-ratio: 1;
+  fill: var(--clr-neutral-100);
+}
+
+.social-list a:is(:hover, :focus) .social-icon {
+  fill: var(--clr-accent-400);
+  color: rgb(209, 72, 72);
 }
 
 
