--- a/styles.css
+++ b/styles.css
@@ -874,6 +874,210 @@ input:where([type="text"], [type="email"], ) {
 
 
 
+
+/*==================== PORTFOLIO ====================*/
+
+.event-body {
+  margin: 0 0 3rem 0;
+  font-size: 1rem;
+  background-color: hsl(250, 60%, 99%);
+  color: hsl(250, 8%, 45%);
+}
+
+.container-event {
+  max-width: 950px;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+.event-body {
+  padding: 2rem 0 4rem;
+  
+}
+
+.events-body {
+  padding: 2rem 0 4rem;
+}
+
+.events__title {
+  font-size: 2.25rem;
+  font-weight: bold;
+  color: hsl(250, 8%, 15%);
+}
+
+.events__subtitle {
+  display: block;
+  font-size: .875rem;
+  margin-bottom: 3rem;
+}
+
+.events__title, 
+.events__subtitle {
+  text-align: center;
+}
+
+.event-grid {
+  display: grid;
+  gap: 1.5rem;
+  margin-bottom: 60px;
+}
+
+/*==================== PORTFOLIO ====================*/
+
+.events__container{
+  overflow: initial;
+}
+
+.event__content{
+  padding: 0 1.5rem;
+}
+
+.event__img{
+  width: 256px;
+  border-radius: .5rem;
+  justify-self: center;
+}
+
+.event__heading{
+  font-size: 1.25rem;
+  color: #262626;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
+
+.event__desc{
+  margin-bottom: 0.75rem;
+  opacity: 1;
+  color: #42455a;
+}
+
+
+.portfolio__button:hover .button__icon{
+  transform: translateX(.25rem);
+
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after{
+  content: '';
+}
+
+.swiper-portfolio-icon{
+  font-size: 2rem;
+  color: hsl(250, 69%, 61%);
+}
+
+.swiper-button-prev{
+  left: -.5rem;
+}
+
+.swiper-button-next{
+
+  right: -.5rem;
+}
+
+.swiper-container-horizontal > .swiper-pagination-bullets{
+  
+  bottom: -2.5rem;
+}
+
+.swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
+  bottom: -45px;
+  left: 0;
+  width: 100%;
+}
+
+.swiper-pagination-bullet-active{
+  background-color: hsl(250, 69%, 61%);
+}
+
+
+.swiper-button-prev,
+.swiper-button-next,
+.swiper-pagination-bullet{
+  outline: none;
+}
+
+
+
+/*==================== MEDIA QUERIES ====================*/
+/* For small devices */
+@media screen and (max-width: 350px){
+  .container-event{
+  margin-left: 1rem;
+  margin-right: 1rem;
+  }
+}
+
+/* For medium devices */
+
+@media screen and (min-width: 568px){
+  .event__content,
+  .events__container{
+  grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 768px){
+  .container-event{
+  margin-left: auto;
+  margin-right: auto;
+  }
+
+  .event-body{
+    margin: 0;
+  }
+
+  .event-body{
+    padding: 6rem 0 2rem;
+  }
+
+  .events__subtitle{
+    margin-bottom: 4rem;
+  }
+
+  .event__img{
+    width: 320px;
+  }
+
+  .event__content{
+    align-items: center;
+  }
+}
+
+
+
+/* For large devices */
+
+@media  screen and (min-width:1024px){
+  .event__content{
+    column-gap: 5rem;
+  }
+
+  .swiper-portfolio-icon{
+    font-size: 3.5rem;
+  }
+
+  .swiper-button-prev{
+    left: -3.5rem;
+  }
+
+  .swiper-button-next{
+    right: -3.5rem;
+  }
+  
+  .swiper-container-horizontal > .swiper-pagination-bullets{
+    bottom: -4.5rem;
+  }
+}
+
+
+
+
+
+
+
 /* Utility classes */
 
 .visually-hidden {
