added spacing between event arrows

--- a/styles.css
+++ b/styles.css
@@ -969,11 +969,12 @@ input:where([type="text"], [type="email"], ) {
 }
 
 .swiper-button-prev{
+  margin-left: -10px;
   left: -.5rem;
 }
 
 .swiper-button-next{
-
+  margin-right: -10px;
   right: -.5rem;
 }
 
